# Effective-serde-By-Writing-Less-Rust-Code

./: Cargo.toml  LICENSE  README.md  energy.json  presentation.html  presentation.md
src/: main.rs
