[package]
name = "effective-serde"
description = "Effective serde By Writing Less Rust Code"
version = "1.0.0"
authors = ["Daniel Pezely <first name at last name dot com>"]
repository = "https://github.com/dpezely/Effective-serde-By-Writing-Less-Rust-Code.git"
license = "CC-by"
edition = "2018"

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"

